tests/paczka1/fuzzy1/41200204.err
Error in line 4: 0FQH5jkDSVH S380 74,4
Error in line 16: 6YAyIbz5MaF A201 89,7
Error in line 24: 6YAyIbz5MaF S237 60,4
Error in line 28: 0FQH5jkDSVH S237 56,0
Error in line 34: r8ILYnn3f A201 51,74
Error in line 19: r8ILYnn3f A201 57,8
